--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="made_with">Made with 💗 using Pexels API</p>
         </div>
         <!--LINK CUSTOM JS FILE-->
-        <script src="./script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html> 
  
