--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--End of META information-->
         <title>Image Search App</title>
         <!--LINK CUSTOM CSS FILE-->
-        <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <h1>Image Search Gallery </h1>
